Firstnginxpod/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: swamiped/mydjangoweb:latest
      ports:
        - containerPort: 8000
